--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -4,9 +4,64 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.chronos.themeprojectitsmap_201270746.MainMenuActivity">
+    tools:context="com.example.chronos.themeprojectitsmap_201270746.MainMenuActivity"
+    android:background="#F0F8FF" >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Turn off"
+        android:id="@+id/offSwitch"
+        android:checked="false"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/header" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Snooze"
+        android:id="@+id/snoozeButton"
+        android:layout_above="@+id/offSwitch"
+        android:layout_centerHorizontal="true"
+         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Activity reminder"
+        android:id="@+id/header"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="40dp"
+        />
+
+    <ImageButton
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/editButton"
+        android:src="@mipmap/edit_icon"
+        android:background="#F0F8FF"
+
+        android:layout_alignTop="@+id/addButton"
+        android:layout_alignEnd="@+id/offSwitch" />
+
+    <ImageButton
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/addButton"
+        android:src="@mipmap/add_activity_icon"
+        android:background="#F0F8FF"
+        android:layout_marginBottom="63dp"
+        android:layout_above="@+id/offSwitch"
+        android:layout_alignStart="@+id/header" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/header"
+        android:layout_alignStart="@+id/header"
+        android:layout_above="@+id/addButton" />
 
 </RelativeLayout>
