--- a/app/src/main/res/layout/popup_layout_main_snooze.xml
+++ b/app/src/main/res/layout/popup_layout_main_snooze.xml
@@ -1,23 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:id="@+id/popup"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#F0F8FF"
+    >
 
     <TimePicker
         android:id="@+id/timePicker"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
     </TimePicker>
 
     <Button
         android:id="@+id/close"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Close"
-    />
+        android:text="Cancel"
+        android:layout_gravity="right"
+        android:layout_marginRight="40dp"
+        android:layout_below="@+id/timePicker"
+        android:layout_alignParentEnd="true" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/saveBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:layout_gravity="left"
+        android:layout_marginLeft="40dp"
+        android:layout_below="@+id/timePicker"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textViewHour"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textViewMinute"
+        android:layout_above="@+id/textViewHour"
+        android:layout_toEndOf="@+id/saveBtn" />
+</RelativeLayout>
