--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -10,7 +10,7 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Turn off"
+        android:text="Off"
         android:id="@+id/offSwitch"
         android:checked="false"
         android:layout_alignParentBottom="true"
