--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,17 +1,5 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-    <EditTextPreference
-        android:key="@string/pref_key_activity_name"
-        android:title="@string/pref_title_activity_name"
-        android:defaultValue="@string/pref_default_activity_name"
-        android:selectAllOnFocus="true"
-        android:inputType="textCapWords"
-        android:capitalize="words"
-        android:singleLine="true"
-        android:maxLines="1" />
-
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
@@ -30,5 +18,11 @@
         android:title="@string/pref_title_gps_status"
         android:summary="@string/pref_description_gps_status"
         android:defaultValue="false" />
+
+    <ListPreference
+        android:dependency="@string/pref_key_gps_status"
+        android:title="@string/pref_title_gps_list"
+        android:key="@string/pref_key_gps_list">
+    </ListPreference>
 
 </PreferenceScreen>
