--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -8,8 +8,11 @@
 
     <string name="pref_title_gps_status">Enable Geoloc</string>
     <string name="pref_key_gps_status">gps_active</string>
-    <string name="pref_description_gps_status">Turn on/off geolocations for your Activity
-    </string>
+    <string name="pref_description_gps_status">Turn on/off geolocations for your Activity</string>
+
+    <string-array name="geolocation_defaults">
+        <item>Home Default</item>
+    </string-array>
 
     <string name="pref_title_activity_name">Activity name</string>
     <string name="pref_key_activity_name">activity_name</string>
@@ -27,6 +30,13 @@
 
     <string name="pref_title_from">Start</string>
     <string name="pref_title_to">End</string>
+
+    <string name="pref_title_dnd_list">Do Not Disturb</string>
+    <string name="pref_key_dnd_list">dnd_list_key</string>
+
+    <string-array name="default_dnd">
+        <item>All f***ing day!</item>
+    </string-array>
 
     <string name="pref_header_night_mode">Night Mode</string>
 
