--- a/app/src/main/res/xml/pref_dnd.xml
+++ b/app/src/main/res/xml/pref_dnd.xml
@@ -8,4 +8,10 @@
         android:key="timePrefB_Key"
         android:title="@string/pref_title_to"/>
 
+    <ListPreference
+        android:name="@string/pref_title_dnd_list"
+        android:key="@string/pref_key_dnd_list"
+        android:entries="@array/default_dnd">
+    </ListPreference>
+
 </PreferenceScreen>
