--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -22,7 +22,8 @@
     <ListPreference
         android:dependency="@string/pref_key_gps_status"
         android:title="@string/pref_title_gps_list"
-        android:key="@string/pref_key_gps_list">
+        android:key="@string/pref_key_gps_list"
+        android:entries="@array/geolocation_defaults">
     </ListPreference>
 
 </PreferenceScreen>
