--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.chronos.themeprojectitsmap_201270746.MainMenuActivity"
-    android:background="#F0F8FF">
+    android:background="#F0F8FF"
+    >
 
     <Switch
         android:layout_width="wrap_content"
@@ -66,4 +67,5 @@
         android:background="@drawable/activity_list_border"
         android:padding="1dp"
     />
+
 </RelativeLayout>
