--- a/app/src/main/res/xml/pref_nightmode.xml
+++ b/app/src/main/res/xml/pref_nightmode.xml
@@ -6,5 +6,6 @@
         android:title="@string/pref_title_night_from"/>
     <com.example.chronos.themeprojectitsmap_201270746.Utilities.TimePreference
         android:key="@string/pref_key_night_to"
-        android:title="@string/pref_title_night_to"/>
+        android:title="@string/pref_title_night_to"
+        android:dependency="@string/pref_key_night_from"/>
 </PreferenceScreen>
