--- a/app/src/main/res/layout/activity_wizard.xml
+++ b/app/src/main/res/layout/activity_wizard.xml
@@ -3,7 +3,8 @@
     tools:context="com.example.chronos.themeprojectitsmap_201270746.Wizard.WizardActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#F0F8FF">
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
